netcfg (0.68) UNRELEASED; urgency=low

  * Joshua Kwan
    - When we get a hostname from DHCP, seed the domain name with whatever
      was received.
    - Rework is_hotpluggable_iface a tad.
    - Fix problem where broadcast address was being used twice.. only on
      some architectures, due to code with unspecified behavior.

 -- Joshua Kwan <joshk@triplehelix.org>  Fri, 28 May 2004 10:05:29 -0700

netcfg (0.67) unstable; urgency=high

  * The "we love bugfixes that make new bugs" release.
  * Per Olofsson
    - Fixed segfault in find_in_devnames when a card was missing a devnames
      entry.
  * Joshua Kwan
    - Add a NETCFG_VERSION thingy so it's easier to figure out who's using
      what.
    - Don't reset the hostname to 'debian' on a failed seed from DNS.
    - Write resolv.conf and nothing else before preliminary activation
      for static configuration. This fixes the overwriting of static-specific
      interface entries with the common (lo) entry.

 -- Joshua Kwan <joshk@triplehelix.org>  Mon, 24 May 2004 16:27:06 -0700

netcfg (0.66) unstable; urgency=low

  * Joshua Kwan
    - Ask for a hostname and domain when user chooses not to configure the
      network.
    - Add useful canned IPv6 entries into the hosts file.
  * Updated translations:
    - Slovenian (sl.po) by Jure Čuhalev
    - Traditional Chinese (zh_TW.po) by Tetralet

 -- Joshua Kwan <joshk@triplehelix.org>  Mon, 24 May 2004 08:11:57 -0700

netcfg (0.65) unstable; urgency=low

  * Joshua Kwan
    - Fix machine state in static configuration to call QUIT.
      (Closes: #250074)
    - Rewrite resolv.conf in static configuration once we acquire a
      domain name.
    - DHCP server is not required to supply a domain name. (Closes: #250021)
    - Switch to using mii-diag-udeb instead of mii-lite.c, which doesn't
      seem to work across the board. (also addresses #250074)
    - In static configuration, if the IP address specified turns out to be