@@ -67,6 +67,7 @@ int main(int argc, char *argv[])
     di_system_init("netcfg");
 
     parse_args (argc, argv);
+    reap_old_files ();
     open_sockets();
 
     /* initialize debconf */
