@@ -1,2 +1,9 @@
 #!/bin/sh -e
-# netcfg adds commands to this
+# Copy all relevant networking-related files to /target.
+
+for file in /etc/network/interfaces /etc/networks /etc/hostname /etc/resolv.conf /etc/hosts /etc/dhclient.conf /etc/dhcp3/dhclient.conf; do
+	if [ -f "$file" ]; then
+		mkdir /target/$(dirname $file) -p
+		cp $file /target/$file
+	fi
+done
